# m365-ioc-csv-generator

./: .gitignore  CHANGELOG.md  README.md  USAGE.md  pyproject.toml  start.bat  start.sh
input/: .gitkeep  sample_ioc_collection.xlsx  sample_iocs.csv  sample_mixed_data.csv  sample_network_iocs.csv  sample_simple_list.xlsx  test_masked_iocs.csv  test_md5_iocs.csv
logs/: .gitkeep
output/: .gitkeep
src/m365_ioc_csv/: __init__.py  __main__.py  app.py
src/m365_ioc_csv/core/: __init__.py  config.py  csv_parser.py  csv_writer.py  excel_parser.py  ioc_detector.py  ioc_unmasker.py
src/m365_ioc_csv/tui/: __init__.py
src/m365_ioc_csv/tui/screens/: __init__.py  main_screen.py  processing_screen.py  sheet_selection_screen.py
src/m365_ioc_csv/tui/styles/: __init__.py
src/m365_ioc_csv/tui/widgets/: __init__.py
src/m365_ioc_csv/utils/: __init__.py  error_handler.py  logger.py
tests/: test_ioc_unmasker.py
